<resources>
    <string name="app_name">MAD Guardians</string>
    <string name="signup">Sign Up</string>
    <string name="login_string">Log In</string>

    <string name="already_have_an_account__string">Already have an account? </string>
    <string name="log_in_here_ek1_string">Log in here</string>
    <string name="name_string">Name</string>
    <string name="email_string">Email</string>
    <string name="confirm_password_string">Confirm password</string>
    <string name="password_string">Password</string>

    <string name="need_an_account__string">Need an account?   </string>
    <string name="forgot_password__string">Forgot Password?</string>
    <string name="title_activity_homepage">homepage_activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!--    Home page-->
    <string name="courses_string">Courses</string>
    <string name="volunteer_string">Volunteer</string>
    <string name="home_ek1_string">Home</string>
    <string name="consult_string">Consult </string>
    <string name="profile_string">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_home">home</string>
    <string name="title_activity_nav">nav</string>
    <string name="title_activity_test">test</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_nav_vew_bnv">NavVewBNV</string>
    <string name="logout_string">Logout</string>

</resources>