<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
<!--        <item-->
<!--            android:id="@+id/nav_volunteer"-->
<!--            android:icon="@drawable/ic_volunteer"-->
<!--            android:title="@string/volunteer_string" />-->
        <item
            android:id="@+id/nav_consult"
            android:icon="@drawable/ic_mental_health"
            android:title="@string/consult_string" />

        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/profile"
            android:title="@string/profile_string" />
    </group>
</menu>