<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="wrap_content">

	<View
		android:id="@+id/bg_white"
		android:layout_width="393dp"
		android:layout_height="851dp"
		android:background="@drawable/bg_white_shape"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent" />

	<ImageView
		android:id="@+id/img_bg"
		android:layout_width="393dp"
		android:layout_height="851dp"
		android:contentDescription="img_bg"
		android:src="@drawable/img_bg"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent" />

	<TextView
		android:id="@+id/need_an_account_"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="96dp"
		android:layout_marginTop="588dp"
		android:fontFamily="@font/inter"
		android:gravity="center"
		android:text="@string/need_an_account__string"
		android:textColor="@color/need_an_account__color"
		android:textSize="14sp"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent" />

	<TextView
		android:id="@+id/TVsign_up"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="229dp"
		android:layout_marginTop="589dp"
		android:fontFamily="@font/inter"
		android:gravity="center"
		android:text="@string/signup"
		android:textColor="@color/sign_up_ek1_color"
		android:textSize="14sp"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent" />

	<TextView
		android:id="@+id/forgot_password_"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="218dp"
		android:layout_marginTop="545dp"
		android:fontFamily="@font/inter"
		android:gravity="end"
		android:text="@string/forgot_password__string"
		android:textColor="@color/need_an_account__color"
		android:textSize="14sp"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent" />

	<androidx.constraintlayout.widget.ConstraintLayout
		android:id="@+id/group_12"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="49dp"
		android:layout_marginTop="296dp"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent">

		<EditText
			android:id="@+id/email"
			android:layout_width="300dp"
			android:layout_height="58dp"
			android:background="@drawable/edit_text_rectangle"
			android:fontFamily="@font/inter"
			android:hint="@string/email_string"
			android:inputType="textPassword"
			android:padding="10dp"
			android:textColor="@color/already_have_an_account__color"
			android:textSize="20sp"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent" />

		<EditText
			android:id="@+id/password"
			android:layout_width="300dp"
			android:layout_height="58dp"
			android:layout_marginTop="77dp"
			android:background="@drawable/edit_text_rectangle"
			android:fontFamily="@font/inter"
			android:hint="@string/password_string"
			android:inputType="textPassword"
			android:padding="10dp"
			android:textColor="@color/already_have_an_account__color"
			android:textSize="20sp"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent" />


		<ImageView
			android:id="@+id/line_24"
			android:layout_width="29.7dp"
			android:layout_height="0dp"
			android:layout_marginStart="252dp"
			android:layout_marginTop="92dp"
			android:contentDescription="line_24"
			android:src="@drawable/icon_password_seen"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent" />


	</androidx.constraintlayout.widget.ConstraintLayout>


				<Button android:id="@+id/login"
					android:fontFamily="@font/inter"
					android:textStyle="bold"
					android:background="@drawable/red_button_shape"
					android:layout_gravity="center_horizontal|center"
					android:gravity="center"
					android:textSize="24sp"
					android:textColor="@color/bg_white_color"
					android:layout_marginTop="490dp"
					android:layout_marginStart="49dp"
					android:layout_width="296dp"
					android:layout_height="55dp"
					android:text="@string/login_string"
					app:layout_constraintStart_toStartOf="parent"
					app:layout_constraintTop_toTopOf="parent"/>



</androidx.constraintlayout.widget.ConstraintLayout>
