<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.madguardians.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

<!--    <fragment-->
<!--        android:id="@+id/nav_volunteer"-->
<!--        android:name="com.example.madguardians.ui.volunteer.VolunteerFragment"-->
<!--        android:label="@string/volunteer_string"-->
<!--        tools:layout="@layout/fragment_volunteer" />-->

    <fragment
        android:id="@+id/nav_consult"
        android:name="com.example.madguardians.ui.consult.ConsultFragment"
        android:label="@string/consult_string"
        tools:layout="@layout/fragment_consult" />
    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.madguardians.ProfileFragment"
        android:label="@string/profile_string"
        tools:layout="@layout/fragment_profile" >
        <action
            android:id="@+id/action_nav_profile_to_educationQualificationFragment"
            app:destination="@id/educationQualificationFragment" />
        <action
            android:id="@+id/action_nav_profile_to_collectionFragment"
            app:destination="@id/collectionFragment" />
        <action
            android:id="@+id/action_nav_profile_to_editProfileFragment"
            app:destination="@id/editProfileFragment" />
        <action
            android:id="@+id/action_nav_profile_to_notificationFragment"
            app:destination="@id/notificationFragment" />
    </fragment>
    <fragment
        android:id="@+id/educationQualificationFragment"
        android:name="com.example.madguardians.EducationQualificationFragment"
        android:label="Education Qualification" />
    <fragment
        android:id="@+id/collectionFragment"
        android:name="com.example.madguardians.collection.CollectionFragment"
        android:label="Collections" />
    <fragment
        android:id="@+id/editProfileFragment"
        android:name="com.example.madguardians.EditProfileFragment"
        android:label="Edit Profile"
        tools:layout="@layout/fragment_edit_profile" />
    <fragment
        android:id="@+id/notificationFragment"
        android:name="com.example.madguardians.notification.notificationFragment"
        android:label="Notifications" />
</navigation>